# Mesa-LP

./: .firebaserc  LICENSE  README  README.md  benchmark  build_registry.mesa  index.html  mesa  mesa.py  move_files.sh  registry_web.mesa  test_comp  test_main.mesa  test_mod.mesa  uninstall.sh
Mesa-LP/: .gitignore  COMO_CREAR_LIBRERIAS.md  benchmark.mesa  debug_sino_si.mesa  install.sh  probar_todo.sh  prueba_tipos.mesa  setup.sh  test_comp.mesa  test_tipado.mesa
Mesa-LP/compiler_native/: lexer.mesa
Mesa-LP/examples/: bajo_real.mesa  demo_completo.mesa  funciones.mesa  index.html  mi_web.mesa  (+1 more)
Mesa-LP/mesa-core/: Cargo.toml
Mesa-LP/mesa-core/src/: codegen_c.rs  env.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  value.rs
compiler/: __init__.py  ast_nodes.py  codegen.py  interpreter.py  lexer.py  lexer.py.backup  parser.py  parser.py.bak  stdlib.py  x86.py
docs/: DOCS.md
eml/: README.md
examples/: bajo_nivel.mesa  bilingue_basico.mesa  bucles.mesa  calculadora.mesa  condicionales.mesa  demo_stdlib.mesa  errores.mesa  file.mesa  hello_world.mesa  hola.mesa  hola_mundo.mesa  jeje.mesa  listas.mesa  manejo_errores.mesa  web.mesa
lib_remota/: README.md  lib_remota.mesa  mesa_pkg.json
mesa-os/: build_os.mesa  generate.py  kernel.mesa  mesa_os.img  mi_os.img  minimo.img  plantilla.img  plantilla.mesa
mesa_output/: cabra.txt  config.json  datos.csv  lista.txt  reporte.json  saludo_copia.txt
mi_lib/: README.md  mesa_pkg.json  mi_lib.mesa
mi_proyecto/: README.md  mesa.json
public/: index.html
tests/: test_basico.mesa
utiles/: mesa_pkg.json
(+34 files in other folders)
