[package]
name = "mesa-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
walkdir = "2.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
tempfile = "3.8"
fs_extra = "1.3"
chrono = "0.4"
regex = "1.10"
md5 = "0.7"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
uuid = { version = "1.7", features = ["v4"] }
bcrypt = "0.15"
rand = "0.8"
